hex_printf of BMI160 and AS7341 is OK

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "cstring": "cpp",
+        "i2c_periph.h": "c",
+        "periph_defs.h": "c",
+        "i2c.h": "c"
     }
 }
