--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,4 @@ board_build.flash_mode = dio
 monitor_speed = 115200
 lib_deps =
 	dfrobot/DFRobot_BMI160@^1.0.0
-
-	dfrobot/DFRobot_AS7341@^1.0.0
+	adafruit/Adafruit AS7341@^1.3.3
