--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,16 @@
         "cstring": "cpp",
         "i2c_periph.h": "c",
         "periph_defs.h": "c",
-        "i2c.h": "c"
+        "i2c.h": "c",
+        "array": "cpp",
+        "*.tcc": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "memory": "cpp",
+        "random": "cpp",
+        "initializer_list": "cpp"
     }
 }
