--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:airm2m_core_esp32c3]
+[env:pico32]
 platform = espressif32
-board = airm2m_core_esp32c3
+board = pico32
 framework = arduino
 board_build.flash_mode = dio
-monitor_speed = 115200
 lib_deps =
 	dfrobot/DFRobot_BMI160@^1.0.0
 	adafruit/Adafruit AS7341@^1.3.3
