--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = pico32
 framework = arduino
 board_build.flash_mode = dio
+upload_port = COM8
 lib_deps =
 	dfrobot/DFRobot_BMI160@^1.0.0
 	adafruit/Adafruit AS7341@^1.3.3
